Text Blurring Resolved by Changing Width. Fixes Screener Tabs.

--- a/src/screener/style/screener.scss
+++ b/src/screener/style/screener.scss
@@ -217,7 +217,7 @@ $black: #000;
 	font-size: 10px;
 	padding-top: 41px;
 	position: relative;
-	width: 90%;
+	width: 92%;
 }
 
 
